UHF-3268: Added published_at and modified_at variables for the news item templates. Set page_has_sidebar and move_before_content variables for the news item. Added templates for latest news block, latest news views, news item and news item tiny teaser.

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -8,3 +8,11 @@ msgstr "Linkki avautuu uuteen välilehteen"
 msgctxt "Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service."
 msgid "Link leads to external service"
 msgstr "Linkki johtaa ulkoiseen palveluun"
+
+msgctxt "The helper text before the node changed timestamp"
+msgid "Updated"
+msgstr "Päivitetty"
+
+msgctxt "The helper text before the social media share buttons"
+msgid "Share"
+msgstr "Jaa"
