--- a/translations/sv.po
+++ b/translations/sv.po
@@ -8,3 +8,11 @@ msgstr "Länken öppnas i en ny flik"
 msgctxt "Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service."
 msgid "Link leads to external service"
 msgstr "Länk leder till extern tjänst"
+
+msgctxt "The helper text before the node changed timestamp"
+msgid "Updated"
+msgstr "Uppdaterad"
+
+msgctxt "The helper text before the social media share buttons"
+msgid "Share"
+msgstr "Dela"
