UHF-3268: Added main image caption field and translations for the label.

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -16,3 +16,7 @@ msgstr "Päivitetty"
 msgctxt "The helper text before the social media share buttons"
 msgid "Share"
 msgstr "Jaa"
+
+msgctxt "Hardcoded label for the image caption"
+msgid "Photo:"
+msgstr "Kuva:"
