--- a/translations/sv.po
+++ b/translations/sv.po
@@ -2,5 +2,5 @@ msgid ""
 msgstr ""
 
 msgctxt "Explanation for users that the link opens in a new tab instead of the expected current tab"
-msgid "the link opens in a new tab"
-msgstr "länken öppnas i en ny flik"
+msgid "The link opens in a new tab"
+msgstr "Länken öppnas i en ny flik"
