UHF-2836: Add translations for external links

--- a/translations/sv.po
+++ b/translations/sv.po
@@ -4,3 +4,7 @@ msgstr ""
 msgctxt "Explanation for users that the link opens in a new tab instead of the expected current tab"
 msgid "The link opens in a new tab"
 msgstr "Länken öppnas i en ny flik"
+
+msgctxt "Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service."
+msgid "Link leads to external service"
+msgstr "Länk leder till extern tjänst"
