--- a/translations/sv.po
+++ b/translations/sv.po
@@ -24,3 +24,19 @@ msgstr "@caption Bild: @photographer"
 msgctxt "Image photographer"
 msgid "Photo: @photographer"
 msgstr "Bild: @photographer"
+
+msgctxt "The helper text before the node published timestamp"
+msgid "Published"
+msgstr "Publicerad"
+
+msgctxt "The helper text before the node changed timestamp"
+msgid "Updated"
+msgstr "Uppdaterad"
+
+msgctxt "Label for screen reader software users explaining that this is a list of tags related to this page."
+msgid "Tags"
+msgstr "Taggar"
+
+msgctxt "Page lead-in section explanation for screen readers"
+msgid "Lead-in paragraph"
+msgstr "Inledande paragraf"
