--- a/translations/sv.po
+++ b/translations/sv.po
@@ -40,3 +40,7 @@ msgstr "Taggar"
 msgctxt "Page lead-in section explanation for screen readers"
 msgid "Lead-in paragraph"
 msgstr "Inledande paragraf"
+
+msgctxt "Content liftup card hit for seeing more information on content page"
+msgid "See details"
+msgstr "Se detaljer"
