--- a/translations/fi.po
+++ b/translations/fi.po
@@ -59,5 +59,5 @@ msgid "Unpublished"
 msgstr "Julkaisematon"
 
 msgctxt "Long description for editors about current page being unpublished"
-msgid "See details"
+msgid "This page is unpublished"
 msgstr "Tämä sivu on julkaisematon"
