--- a/translations/fi.po
+++ b/translations/fi.po
@@ -109,3 +109,6 @@ msgstr "Anna palautetta"
 msgctxt "Log in block title on error pages"
 msgid "Log in"
 msgstr "Kirjaudu sisään"
+
+msgid "The site is currently under maintenance"
+msgstr "Päivitämme sivustoa tällä hetkellä"
