--- a/translations/sv.po
+++ b/translations/sv.po
@@ -112,3 +112,11 @@ msgstr "Vi uppdaterar sidan som bäst"
 
 msgid "Close announcement"
 msgstr "Stäng undantagsmeddelandet"
+
+msgctxt "Explanation for screen-reader software that the icon visible next to this link means that the link starts a phone call."
+msgid "Link starts a phone call"
+msgstr "Link startar ett telefonsamtal"
+
+msgctxt "Explanation for screen-reader software that the icon visible next to this link means that the link opens default mail program."
+msgid "Link opens default mail program"
+msgstr "Länk öppnar standardprogram för e-post"
