UHF-3643: Fix header top navigation unique id and screen reader headings

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -157,3 +157,7 @@ msgstr "Kytke alivalikko:"
 msgctxt "Mobile navigation menu description for screen readers"
 msgid "Navigation menu"
 msgstr "Navigaatiovalikko"
+
+msgctxt "Screenreader name for top navigation menu"
+msgid "Site navigation"
+msgstr "Sivuston navigaatio"
