UHF-4465: Add nojs fallback for events list

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -161,3 +161,6 @@ msgstr "Navigaatiovalikko"
 msgctxt "Screenreader name for top navigation menu"
 msgid "Site navigation"
 msgstr "Sivuston navigaatio"
+
+msgid "You must enable JavaScript in your browser for event list to work"
+msgstr "Tapahtumalistan toimimiseksi sinun tulee sallia JavaScript selaimessasi"
