UHF-5289: Changes news theming to match the design

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -107,6 +107,10 @@ msgctxt "The helper text before the node changed timestamp"
 msgid "Updated"
 msgstr "Päivitetty"
 
+msgctxt "The helper text before the node changed timestamp"
+msgid "Updated over a year ago"
+msgstr "Päivitetty yli vuosi sitten"
+
 msgctxt "The helper text before the social media share buttons"
 msgid "Share"
 msgstr "Jaa"
