--- a/translations/sv.po
+++ b/translations/sv.po
@@ -103,6 +103,10 @@ msgctxt "The helper text before the node changed timestamp"
 msgid "Updated"
 msgstr "Uppdaterad"
 
+msgctxt "The helper text before the node changed timestamp"
+msgid "Updated over a year ago"
+msgstr "Uppdaterad för över ett år sedan"
+
 msgctxt "The helper text before the social media share buttons"
 msgid "Share"
 msgstr "Dela"
