UHF-5228: disable genesys button if chat does not exist

--- a/translations/sv.po
+++ b/translations/sv.po
@@ -200,3 +200,6 @@ msgstr "Gå till nästa sida"
 msgctxt "Pagination next page link text"
 msgid "Next"
 msgstr "Nästa"
+
+msgid "Chat is not in use."
+msgstr "Chatten används inte."
