--- a/translations/fi.po
+++ b/translations/fi.po
@@ -203,3 +203,6 @@ msgstr "Mene seuraavalle sivulle"
 msgctxt "Pagination next page link text"
 msgid "Next"
 msgstr "Seuraava"
+
+msgid "Chat is not in use."
+msgstr "Chat ei ole käytössä."
