--- a/translations/sv.po
+++ b/translations/sv.po
@@ -203,3 +203,7 @@ msgstr "Nästa"
 
 msgid "Chat is not in use."
 msgstr "Chatten används inte."
+
+msgctxt "Popular services paragraph title"
+msgid "Popular services"
+msgstr "Populära tjänster"
