--- a/translations/fi.po
+++ b/translations/fi.po
@@ -210,3 +210,7 @@ msgstr "Chat ei ole käytössä."
 msgctxt "Popular services paragraph title"
 msgid "Popular services"
 msgstr "Suosittuja palveluja"
+
+msgctxt "News archive heading"
+msgid "All news items"
+msgstr "Kaikki uutiset"
