--- a/translations/fi.po
+++ b/translations/fi.po
@@ -210,3 +210,7 @@ msgstr "Chat ei ole käytössä."
 msgctxt "Popular services paragraph title"
 msgid "Popular services"
 msgstr "Suosittuja palveluja"
+
+msgctxt "News list paragraph see all news link"
+msgid "See all the news"
+msgstr "Katso kaikki uutiset"
