--- a/translations/sv.po
+++ b/translations/sv.po
@@ -7,6 +7,9 @@ msgstr "Ändra inställningarna för cookies"
 msgid "Check that you have typed in the page address correctly. We may have deleted or moved the content."
 msgstr "Kontrollera att sidans adress är rätt skriven. Vi kan också ha tagit bort eller flyttat sidan."
 
+msgid "City of Helsinki"
+msgstr "Helsingfors stad"
+
 msgid "Close announcement"
 msgstr "Stäng undantagsmeddelandet"
 
