UHF-6852: Fix typo

--- a/translations/sv.po
+++ b/translations/sv.po
@@ -277,6 +277,6 @@ msgctxt "Other languages-navigation"
 msgid "Information in other languages"
 msgstr "Information på andra språk"
 
-msctxt "Search: remove item aria label"
+msgctxt "Search: remove item aria label"
 msgid "Remove @item from search results"
 msgstr "Ta bort @item från sökresultaten"
