--- a/translations/fi.po
+++ b/translations/fi.po
@@ -280,6 +280,6 @@ msgctxt "Other languages-navigation"
 msgid "Information in other languages"
 msgstr "Tietoa muilla kielillä"
 
-msctxt "Search: remove item aria label"
+msgctxt "Search: remove item aria label"
 msgid "Remove @item from search results"
 msgstr "Poista @item hakutuloksista"
