--- a/translations/sv.po
+++ b/translations/sv.po
@@ -266,10 +266,14 @@ msgid "Search"
 msgstr "Sök"
 
 msgctxt "Header search, no javascript"
-msgid "Hel.fi search requires JavaScript. Your browser doesn't support JavaScript or it is disabled. Please check your browser settings and try again."
-msgstr "Hel.fi-webbtjänstens sök använder JavaScript. Din webbläsare stöder inte JavaScript eller det är inaktiverad. Kontrollera webbläsarens inställningar och försök igen."
+msgid "requires JavaScript. Your browser doesn't support JavaScript or it is disabled. Please check your browser settings and try again."
+msgstr "använder JavaScript. Din webbläsare stöder inte JavaScript eller det är inaktiverad. Kontrollera webbläsarens inställningar och försök igen."
 
-msgctxt "Header search label"
+msgctxt "Header search, no javascript link"
+msgid "Hel.fi search"
+msgstr "Hel.fi-webbtjänstens sök"
+
+msgctxt "Header and hero search label"
 msgid "What are you looking for?"
 msgstr "Vad söker du?"
 
