UHF-7024: Add translated description to header top bar nav for screen readers

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -287,3 +287,7 @@ msgstr "Sulje tietoa muilla kielillä valikko"
 msgctxt "Other languages-navigation"
 msgid "Information in other languages"
 msgstr "Tietoa muilla kielillä"
+
+msgctxt "Header top navigation screen reader name"
+msgid "Quick links"
+msgstr "Pikalinkit"
